--- a/html5-possibilities/index.html
+++ b/html5-possibilities/index.html
@@ -19,15 +19,16 @@
 
     <div class="content">
         <h1>HTML 5 Possibilities</h1>
-        <p>We didn't always have the internet. We started in the print era, then we moved to the electronic era, but now we are in the digital era. 
-            <br>With the digital era, we developed the World Wide Web (www) which helped the efficiency of communication. Instead of sharing information through print, radio or TV, 
+        <p>We didn't always have the internet. Back in the day, we relied soley on print media and word of mouth to spread information, which was the print era.
+            We then moved to the electronic era, and now we are in the digital era.
+            <br>With the digital era, we developed the internet/World Wide Web (www) which has helped the efficiency of communication. Instead of sharing information through print, radio or TV, 
             we introduced HTML5 and its possibilites to the world. 
         </p>
-        <p>Back in the day, we relied soley on print media or word of mouth to spread information, but HTML has changed that standard drastically.
-            HTML (which stands for Hyper Text Markup Language) is a coding language that consists of basic structure for web content. It can be paired with other web coding language
-            (css, JavScript, JQuery, etc.) to make any sort of website. HTML is now a tool that we use in our everyday lives. It has allowed us to communicate with a larger audience, while also doing it faster and cheaper in the long run.
+        <p> HTML (which stands for Hyper Text Markup Language) is a coding language that consists of basic structure for web content. It can be paired with other web coding languages, like CSS and JavaScript,
+             to make any sort of website. HTML is now a tool that we use in our everyday lives in a drastic way. We are now allowed to share more information faster and cheaper. For example, instead of going to a library
+             and reading a book to get knowledge, we can now simply just google something and thousands of resources will pop up. There are so many cool things, and we are just scratching the tip of the iceberg. 
             <br>
-            Overall, HTML5 is super cool tool!
+            Overall, HTML5 is super cool tool that will continue to grow and teach us things!
 
     </div>
 
