--- a/html5-possibilities/index.html
+++ b/html5-possibilities/index.html
@@ -25,7 +25,7 @@
             we introduced HTML5 and its possibilites to the world. 
         </p>
         <p> HTML (which stands for Hyper Text Markup Language) is a coding language that consists of basic structure for web content. It can be paired with other web coding languages, like CSS and JavaScript,
-             to make any sort of website. HTML is now a tool that we use in our everyday lives in a drastic way. We are now allowed to share more information faster and cheaper. For example, instead of going to a library
+             to make any sort of website. HTML is now a tool that we use in our everyday lives, and has changed it in a drastic way. We are now allowed to share more information faster and cheaper. For example, instead of going to a library
              and reading a book to get knowledge, we can now simply just google something and thousands of resources will pop up. There are so many cool things, and we are just scratching the tip of the iceberg. 
             <br>
             Overall, HTML5 is super cool tool that will continue to grow and teach us things!
