working on second assignment

--- a/html5-possibilities/index.html
+++ b/html5-possibilities/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
 <head>
+    <title>Possibilities of HTML5</title>
     <meta charset="UTF-8">
     <meta name="author" content="Caitlin Romprey">
     <meta name="description" content="The first assignment of MCOM-3310. This is discussing the possibilites of HTML5.">
     <link href="../assets/css/style.css">
+    <link href="favicon.ico" rel="favicon icon">
 </head>
 
 <body>
@@ -22,6 +24,12 @@
             <br>
             Overall, HTML5 is super cool tool that will continue to grow and teach us things!
         </p>
+        <h2>Awesome Features of HTML</h2>
+        <ul>
+            <li></li>
+        </ul>
+
+        <h2></h2>
     </div>
 </div>
 
