--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Basics to HTML5</title>
     <meta charset="UTF-8">
     <meta name="author" content="Caitlin Romprey">
     <meta name="description" content="HOME PAGE">
     <link href="../assets/css/style.css">
+    <link href="favicon.ico" rel="favicon icon">
 </head>
 
 <body>
