--- a/html5-possibilities/index.html
+++ b/html5-possibilities/index.html
@@ -13,6 +13,7 @@
 <div id="container">
     <div class="content">
         <h1>HTML 5 Possibilities</h1>
+        <img src="assets/img/html5-image2.jpg" alt="HTML5 Image" height="540" width="1300">
         <p>We didn't always have the internet. Back in the day, we relied soley on print media and word of mouth to spread information, which was the print era.
             We then moved to the electronic era, and now we are in the digital era.
             <br>With the digital era, we developed the internet/World Wide Web (www) which has helped the efficiency of communication. Instead of sharing information through print, radio or TV, 
@@ -24,12 +25,48 @@
             <br>
             Overall, HTML5 is super cool tool that will continue to grow and teach us things!
         </p>
-        <h2>Awesome Features of HTML</h2>
+        <h2>Awesome features of HTML</h2>
         <ul>
-            <li></li>
+            <li>Simple and User Friendly</li>
+            <li>Accessible</li>
+            <li>SEO - Search Engine Optimization</li>
         </ul>
 
-        <h2></h2>
+        <h3>Good practices of HTML:</h3>
+        <ol>
+            <li>Make sure your spelling and grammar is correct.</li>
+            <li>Try to have only one H1 tag (for SEO purposes).</li>
+            <li>Validate your code once finished with website to ensure all errors.</li>
+        </ol>
+
+        <h4>
+        <a href="https://validator.w3.org/">W3 HTML Validator</a>
+        </h4>
+        <p>This is a great resource to help check and validate your code. You can enter the code in directly or input by link!</p>
+        
+        <!--This is an example of an HTML comment. Comment syntaxes differ between coding langages.-->
+
+        <table>
+            <tr>
+                <th>Favorite Foods:</th>
+                <th>Favorite Colors:</th>
+                <th>Favorite Sports:</th>
+            </tr>
+            <tr>
+                <td>Pasta</td>
+                <td>Purple</td>
+                <td>Swim</td>
+            </tr>
+            <tr>
+                <td>Sandwiches</td>
+                <td>Pink</td>
+                <td>Hockey</td>
+            </tr>
+            <tr>
+                <td>Popcorn</td>
+                <td>Blue</td>
+                <td>Wrestling</td>
+            </tr>
     </div>
 </div>
 
