--- a/html5-possibilities/index.html
+++ b/html5-possibilities/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Caitlin Romprey">
     <meta name="description" content="The first assignment of MCOM-3310. This is discussing the possibilites of HTML5.">
-    <link href="../assets/css/style.css">
+    <link href="../assets/css/style.css" rel="stylesheet">
     <link href="favicon.ico" rel="favicon icon">
 </head>
 
@@ -67,6 +67,7 @@
                 <td>Blue</td>
                 <td>Wrestling</td>
             </tr>
+        </table>
     </div>
 </div>
 
