--- a/html5-possibilities/index.html
+++ b/html5-possibilities/index.html
@@ -12,7 +12,9 @@
 <body>
 <div id="container">
     <div class="content">
-        <h1>HTML 5 Possibilities</h1>
+        <h1>
+            <a href="https://www.htmlgoodies.com/html/html-5-features-what-web-developers-can-use-now/">HTML5 Possibilites</a>
+        </h1>
         <img src="https://techbeacon.com/sites/default/files/styles/social/public/html5-mobile-app-native-hybrid-pros-cons.jpg?itok=R3pMKIzh" alt="HTML5 Image" height="540" width="1300">
         <p>We didn't always have the internet. Back in the day, we relied soley on print media and word of mouth to spread information, which was the print era.
             We then moved to the electronic era, and now we are in the digital era.
@@ -44,33 +46,24 @@
         </h4>
         <p>This is a great resource to help check and validate your code. You can enter the code in directly or input by link!</p>
         
-        <!--This is an example of an HTML comment. Comment syntaxes differ between coding langages.-->
+        <!--This is an example of an HTML comment. Comment syntaxes differ between coding langages-->
 
-        <table>
+
+        <table border="1">
             <tr>
-                <th>Favorite Foods:</th>
-                <th>Favorite Colors:</th>
-                <th>Favorite Sports:</th>
+                <th>Tags or Attributes</th>
+                <th>What I learned:</th>
+                <th>Something Challenging</th>
             </tr>
             <tr>
-                <td>Pasta</td>
-                <td>Purple</td>
-                <td>Swim</td>
-            </tr>
-            <tr>
-                <td>Sandwiches</td>
-                <td>Pink</td>
-                <td>Hockey</td>
-            </tr>
-            <tr>
-                <td>Popcorn</td>
-                <td>Blue</td>
-                <td>Wrestling</td>
+                <td><"img"> (with no quotations in actual code)</td>
+                <td>You do not need to close the tag</td>
+                <td>Getting the link instead of uploading the image.</td>
             </tr>
         </table>
+
     </div>
 </div>
-
 </body>
 
 </html>
