--- a/table-layout/index.html
+++ b/table-layout/index.html
@@ -20,14 +20,14 @@
                     <br>
                     Relative Links<br>
                     <br>
-                    Absolute Links <br>
-                
+                    <a href="https://www.w3schools.com/">Absolute Links</a>
                 </td>
-                <td bgcolor="a6d5d9"><h3>Absolute vs Relative Links</h3>
+                <td bgcolor="a6d5d9">
+                    <h3>Absolute vs Relative Links</h3>
                     <p>An <em>absolute link</em> is a hyperlink that refers to and maps to outside paths to an actual working URL. An absolute links to another website.
                     Ex: (href="https:ualr.edu")</p>
                     <p>A <em>relative link</em> is a hyperlink that maps to internal paths. It will link to a file inside the website.
-                    Ex: (href="../assets/css/style.css"</p>
+                    Ex: (href="../assets/css/style.css")</p>
                     <p>It is important to understand the difference between relative and absolute links because...</p>
                 </td>
             </tr>
