--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
             <nav>
                 <ul>
-                    <li><a href="html5-possibilities/index.html">Home</a></li>
+                    <li><a href="html5-possibilities/index.html">HTML5 Properties</a></li>
+                    <li><a href="table-layout/table-layout.html">Table Layout</a></li>
                 </ul>
             </nav>
         </div>
