stupid hella freaking dumb assignment bleh

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <div id="container">
         <div class="nav">
-
+            <h1>Caitlin Romprey Website</h1>
+            <p>Click on the items below to see my work for class: MCOM-3310.</p>
             <nav>
                 <ul>
                     <li><a href="html5-possibilities/index.html">HTML5 Properties</a></li>
