--- a/html5-possibilities/index.html
+++ b/html5-possibilities/index.html
@@ -24,7 +24,8 @@
         </h1>
         
         <img src="https://techbeacon.com/sites/default/files/styles/social/public/html5-mobile-app-native-hybrid-pros-cons.jpg?itok=R3pMKIzh" alt="HTML5 Image" height="540" width="1300">
-        <br>
+        <br><br>
+        <p>This is the clickable link, hover the teal HLB logo to see it.</p>
         <img src="assets/img/hlb.jpg".jpg" usemap="#image-map">
         <map name="image-map">
             <area target="" alt="logo" title="logo" href="hillcrestlittlebakery.com" coords="467,212,100" shape="circle">
