--- a/table-layout.html
+++ b/table-layout.html
@@ -20,7 +20,7 @@
                     <br><br>
                     <a href="https://www.techtarget.com/whatis/definition/absolute-link">Absolute Link</a>
                     <br><br>
-                    <a href="./index.html">Relative Link</a><br>
+                    <a href="./index.html">Relative Link - Click this to take back home!</a><br>
                     <br>
                 </td>
                 <td bgcolor="a6d5d9">
